会员详情页加入优惠劵数量

--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -130,7 +130,7 @@
 				<div class="xui-fieldwrap">
       		<label>优惠券：</label>
       		<div class="xui-value f14">
-      			<span style="min-width: 35px;display: inline-block;"><span class="xui-bold">3</span>&nbsp;个</span>
+      			<span style="min-width: 35px;display: inline-block;"><span class="xui-bold">{{coupons|length}}</span>&nbsp;个</span>
       			<a href="javascript:void(0);" class="xui-borderBtn xa-coupon">查看</a>
 					</div>
 				</div>
