--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -157,7 +157,7 @@
     	color: #797878;
     }
     .mbsc-ios .dwwc {
-        padding: 2.5em 0em .833333em 0.833333em;
+        padding: 2.5em .833333em .833333em 3.833333em;
     }
     .xui-all-span{
     	display: inline-block;
