--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -88,7 +88,7 @@
     }
     .xui-RecommendedDetailPage .xui-time .xui-time-wrap{
     	color: #9e9e9e;
-    	font-size: 0.8rem;
+    	font-size: 1rem;
     	float: right;
     	display: inline-block;
     	line-height: 50px;
@@ -168,6 +168,9 @@
 	    background: #FFF !important;
 	    opacity: 0;
 	}
+	.xui-time-span{
+		vertical-align: middle;
+	}
 </style>
 {% endblock %}
 {% block content-panel %}
@@ -176,7 +179,7 @@
 		<div class="xui-filter-time">筛选时间</div>
 		<div class="xui-time-wrap xa-time-wrap">
 	 		{% if startDate and endDate %}
-	 			<span>{{startDate}}&nbsp;-&nbsp;{{endDate}}</span>
+	 			<span class="xui-time-span">{{startDate}}&nbsp;-&nbsp;{{endDate}}</span>
  			{% else %}
 	 			<span class="xui-all-span">全部</span>
  			{% endif %}
