会员名字体修改

--- a/weapp/static_v2/css/member.css
+++ b/weapp/static_v2/css/member.css
@@ -500,6 +500,7 @@
 	color:#333;
 	vertical-align: middle;
 	margin-right: 6px;
+	font-family: "Microsoft YaHei",arial;
 }
 .xui-page-memberDetail .xui-img{
 	width: 70px;
