--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -59,7 +59,19 @@
 				</dd>
 			</dl>
 			<div class="fr" style="margin-top:-15px;">
-				<p class="mb5 tr">关注时间：{{ show_member.created_at|date:"Y-m-j" }}<span class="ml10">直接关注</span></p>
+				<p class="mb5 tr">关注时间：{{ show_member.created_at|date:"Y-m-j" }}<span class="ml10">
+				{% if show_member.source == 0 %}
+					直接关注
+				{% endif %}
+				{% if show_member.source == 1 %}
+					推广扫码
+				{% endif %}
+				{% if show_member.source == 2 %}
+					会员分享
+				{% endif %}
+				{% if show_member.source == -1 %}
+					直接关注
+				{% endif %}</span></p>
 				<p class="mb0">最近交易时间：{{ show_member.last_pay_time|date:"Y-m-j H:i" }}</p>
 			</div>
 		</div>
@@ -178,7 +190,7 @@
 		      购买转化会员数量：<a href="javascript:void(0);" class="xui-color-blue friends" data-value="purchase">{{purchased_fans}}</a>人
 		      </span>
 		      <span class="ml50">
-		      转化率：{{conversion_rate}}
+		      转化率：{{conversion_rate}}%
 		      </span>
 	      </p>
 	      <div
