--- a/weapp/static_v2/css/marketing.css
+++ b/weapp/static_v2/css/marketing.css
@@ -808,7 +808,7 @@
 	z-index: 1000;
     right: 12px;
     top: 30px;
-    display: none;
+    /*display: none;*/
 }
 .xui-rePurchaseAnalyzePage .xui-consumptionBox  input{
 	height: 22px;
@@ -818,6 +818,14 @@
 /*.xui-rePurchaseAnalyzePage .errorHint{
 	line-height: 0px;
 }*/
-.xui-consumptionHelp{
+.xui-rePurchaseAnalyzePage .xui-consumptionHelp{
 	z-index: 9999;
+}
+.xui-rePurchaseAnalyzePage .xui-rangeBox{
+	display: inline-block;
+	width: 30px;
+	height: 22px;
+	border:1px solid #ccc;
+	text-align: center;
+	line-height: 22px;
 }
