--- a/weapp/mall/templates/mall/editor/promotion/flash_sale_detail.html
+++ b/weapp/mall/templates/mall/editor/promotion/flash_sale_detail.html
@@ -105,11 +105,11 @@
 				</div>
 			</div>
 			
-			{% if promotion.detail.count_per_purchase > -1 and promotion.detail.count_per_purchase < 9999999 %}
+			{% if promotion.detail.count_per_period  and promotion.detail.count_per_period < 9999999 %}
 			<div class="form-group">
 				<label class="col-sm-2 xui-i-label fn">购买次数：</label>
 				<div class="col-sm-8 xui-i-content">
-					{{promotion.detail.count_per_purchase}}次					
+					{{promotion.detail.count_per_period}}次
 				</div>
 			</div>
 			{% endif %}
