调整积分不刷新

--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -142,7 +142,7 @@
 				<div class="xui-fieldwrap">
       		<label>积分：</label>
       		<div class="xui-value f14">
-      			<span style="min-width: 35px;display: inline-block;">{{show_member.integral}}</span>
+      			<span id="J_Integral" style="min-width: 35px;display: inline-block;">{{show_member.integral}}</span>
             <a href="javascript:void(0);" class="xa-update-integral xui-borderBtn xa-isEdited hidden" data-id="${member.id}">调积分</a>
             <a href="javascript:void(0);" class="xa-show-integral xui-borderBtn">查看</a>
 					</div>
